[package]
name = "bobcatlunc-token-burner"
version = "0.1.0"
edition = "2021"
authors = ["BobCatLunc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cosmwasm-storage = "1.0.0"
cw-storage-plus = "1.1.2"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }

[features]
library = []